@@ -7,12 +7,13 @@ import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.web.authentication.WebAuthenticationDetailsSource;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 @Component
 public class JwtAuthFilter extends OncePerRequestFilter {
@@ -40,6 +41,7 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 
                     Long userId = jwtUtil.extractUserId(token);
                     Long companyId = jwtUtil.extractCompanyId(token);
+                    String role = jwtUtil.extractRole(token);
 
                     System.out.println("🔥 TENANT FROM TOKEN = " + companyId);
 
@@ -47,7 +49,7 @@ public class JwtAuthFilter extends OncePerRequestFilter {
 
                     UsernamePasswordAuthenticationToken authentication =
                             new UsernamePasswordAuthenticationToken(
-                                    userId, null, Collections.emptyList()
+                                    userId, null, List.of(new SimpleGrantedAuthority("ROLE_" + role))
                             );
 
                     authentication.setDetails(
